--- a/hieke.html
+++ b/hieke.html
@@ -16,9 +16,9 @@
     </div>
 
     <div class="navbar">
-        <a href="home.html" class="active">Home</a>
+        <a href="home.html">Home</a>
         <a href="matilda.html">Matilda</a>
-        <a href="hieke.html">Hieke</a>
+        <a href="hieke.html" class="active">Hieke</a>
         <a href="tomas.html">Tomas</a>
     </div>
 
