--- a/tomas.html
+++ b/tomas.html
@@ -16,10 +16,10 @@
     </div>
 
     <div class="navbar">
-        <a href="home.html" class="active">Home</a>
+        <a href="home.html">Home</a>
         <a href="matilda.html">Matilda</a>
         <a href="hieke.html">Hieke</a>
-        <a href="tomas.html">Tomas</a>
+        <a href="tomas.html" class="active">Tomas</a>
     </div>
 
     <div class="row">
