--- a/home.html
+++ b/home.html
@@ -6,48 +6,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Include jquery to be able to reuse the navigation bar code -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
-<body>
+<body id = Home>
 
     <div class="header">
         <h1>My Website</h1>
         <p>A <b>responsive</b> website created by me.</p>
     </div>
 
-    <div class="navbar">
-        <a href="home.html" class="active">Smart Project</a>
-        <div class="dropdown">
-            <button class="dropbtn">Matilda
-                <i class="fa fa-caret-down"></i>
-            </button>
-            <div class="dropdown-content">
-                <a href="matilda_workshops.html">Workshops</a>
-                <a href="matilda_ontwikkeling.html">Smart me</a>
-            </div>
-        </div>
-        <div class="dropdown">
-            <button class="dropbtn">Hieke
-                <i class="fa fa-caret-down"></i>
-            </button>
-            <div class="dropdown-content">
-                <a href="hieke_workshops.html">Workshops</a>
-                <a href="hieke_ontwikkeling.html">Smart me</a>
-            </div>
-        </div>
-        <div class="dropdown">
-            <button class="dropbtn">Tomas
-                <i class="fa fa-caret-down"></i>
-            </button>
-            <div class="dropdown-content">
-                <a href="tomas_workshops.html">Workshops</a>
-                <a href="tomas_ontwikkeling.html">Smart me</a>
-            </div>
-        </div>
-    </div>
+    <div id="nav-placeholder"></div>
 
     <div class="row">
         <div class="side">
@@ -79,6 +51,12 @@
                 ullamco.</p>
         </div>
     </div>
+
+    <script>
+        $(function () {
+            $("#nav-placeholder").load("navigatie.html");
+        });
+    </script>
 
 </body>
 
