--- a/tomas_workshops.html
+++ b/tomas_workshops.html
@@ -8,45 +8,24 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Include jquery to be able to reuse the navigation bar code -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
-<body>
+<body id = Tomas>
 
     <div class="header">
         <h1>My Website</h1>
         <p>A <b>responsive</b> website created by me.</p>
     </div>
 
-    <div class="navbar">
-        <a href="home.html">Smart Project</a>
-        <div class="dropdown">
-            <button class="dropbtn">Matilda
-                <i class="fa fa-caret-down"></i>
-            </button>
-            <div class="dropdown-content">
-                <a href="matilda_workshops.html">Workshops</a>
-                <a href="matilda_ontwikkeling.html">Smart me</a>
-            </div>
-        </div>
-        <div class="dropdown">
-            <button class="dropbtn">Hieke
-                <i class="fa fa-caret-down"></i>
-            </button>
-            <div class="dropdown-content">
-                <a href="hieke_workshops.html">Workshops</a>
-                <a href="hieke_ontwikkeling.html">Smart me</a>
-            </div>
-        </div>
-        <div class="dropdown">
-            <button class="dropbtn active">Tomas
-                <i class="fa fa-caret-down"></i>
-            </button>
-            <div class="dropdown-content">
-                <a href="tomas_workshops.html">Workshops</a>
-                <a href="tomas_ontwikkeling.html">Smart me</a>
-            </div>
-        </div>
-    </div>
+    <div id="nav-placeholder"></div>
+
+    <script>
+        $(function () {
+            $("#nav-placeholder").load("navigatie.html");
+        });
+    </script>
 
 </body>
 
