--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                 ullamco.</p>
             <br>
-            <h2>TITLE HEADING</h2>
+            <h2>TITLE</h2>
             <h5>Title description, Sep 2, 2017</h5>
             <div class="fakeimg" style="height:200px;">Image</div>
             <p>Some text..</p>
