--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
             <div class="fakeimg" style="height:60px;">Image</div>
         </div>
         <div class="main">
-            <h2>TITLE EADING</h2>
+            <h2>TITLE HEADING</h2>
             <h5>Title description, Dec 7, 2017</h5>
             <div class="fakeimg" style="height:200px;">Image</div>
             <p>Some text..</p>
