--- a/tomas_workshops.html
+++ b/tomas_workshops.html
@@ -74,14 +74,14 @@
 
 
             <h2>Smart Connection</h2>
-                <h5>HTML en CSS</h5>
+                <h4>HTML en CSS</h4>
                     <p> In de eerste les van Smart Connection hebben we voor het eerst kennis gemaakt met het schrijven in de taal HTML en CSS. Hierbij zijn
                         we begonnen met het maken van een site zonder het gebruik van CSS opmaak, hierna hebben we een CSS opmaak toegevoegd aan deze site.
                         Hierdoor is het erg duidelijk om te zien wat de CSS doet. Ik had voorafgaand aan deze minor nog nooit gebruik gemaakt van HTML of CSS 
                         of iets wat hier op lijkt. Ik vond het persoonlijk erg indrukwekkend om te zien wat ik na één les al had bereikt. 
                     </p>
-                    <p> In het onderstaande Figuur is de door mij gemaakte site te zien zonder het gebruik van CSS opmaak.</p>
-                    <div class="fakeimg" style="height:200px;">Image</div>
+                    <p>In de onderstaande links is de door mij gemaakte site weergegeven:</p>
+                    <p><a href="Smart Connection Tomas/Les 1.html">Site les 1</a></p>
 
                 <h5>Title description, Sep 2, 2017</h5>
                     <div class="fakeimg" style="height:200px;">Image</div>
