--- a/Smart Connection Tomas/Les 1.html
+++ b/Smart Connection Tomas/Les 1.html
@@ -4,7 +4,7 @@
       <title>
          My Hello wold
       </title>
-      <link rel="stylesheet" type="text/css" href="css/style.css">
+      <link rel="stylesheet" type="text/css" href="Les 1.css">
    </head>
    <body>
          <!-- Headings -->
@@ -15,16 +15,7 @@
          <!-- Paragraaf -->
          <section id="showcase">
                <div class="container">
-                  <h1>Je vind er HTML-elementen die je kunt gebuiken.
-                  </h1>
-                  <list>
-                        <ul>
-                           <li>URL-links</li>
-                           <li>Video's</li>
-                           <li>images</li>
-                        </ul>
-                     </list>
-               
+                  <h1>Je vind er HTML-elementen die je kunt gebuiken.</h1>           
                </div>
             </section>
          
