--- a/tomas_workshops.html
+++ b/tomas_workshops.html
@@ -83,12 +83,15 @@
                     <p>In de onderstaande links is de door mij gemaakte site weergegeven:</p>
                     <p><a href="Smart Connection Tomas/Les 1.html">Site les 1</a></p>
 
-                <h5>Title description, Sep 2, 2017</h5>
+                <h5>Application Programming Interface</h5>
                     <div class="fakeimg" style="height:200px;">Image</div>
-                    <p>Some text..</p>
-                    <p> Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco.</p>
+                    <p> Application Programming Interface ook wel API genoemd is bedoeld om op een geformaliseerde manier gegevens uit te wisselen tussen
+                        apps. Simpel gezegd zorgen API's er voor dat men gegevens(foto's, berichten, meldingen etc.) kan delen. Voor het bekijken van zulk
+                        gegevens worden echter ook API's voor gebruikt. Je kan hierbij denken aan sociale media apps, voor het uitwisselen van de gegevens die
+                        men stuurd worden API's gebruikt. 
+                    </p>
+                    <p> asd
+                    </p>
 
                 <h5>Title description, Sep 2, 2017</h5>
                     <div class="fakeimg" style="height:200px;">Image</div>
