--- a/navigatie.html
+++ b/navigatie.html
@@ -1,30 +1,34 @@
-<div class="navbar">
-    <a href="home.html" class="home">Smart Project</a>
-    <div class="dropdown">
-        <button class="dropbtn matilda">Matilda
-            <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content">
-            <a href="matilda_workshops.html">Workshops</a>
-            <a href="matilda_ontwikkeling.html">Ontwikkeling</a>
+<body>
+    <div class="navbar">
+        <a href="home.html" class="home">Smart Project</a>
+        <div class="dropdown-responsive">
+            <div class="dropdown">
+                <button class="dropbtn matilda">Matilda
+                    <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                    <a href="matilda_workshops.html">Workshops</a>
+                    <a href="matilda_ontwikkeling.html">Ontwikkeling</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn hieke">Hieke
+                    <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                    <a href="hieke_workshops.html">Workshops</a>
+                    <a href="hieke_ontwikkeling.html">Ontwikkeling</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn tomas">Tomas
+                    <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                    <a href="tomas_workshops.html">Workshops</a>
+                    <a href="tomas_ontwikkeling.html">Ontwikkeling</a>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="dropdown">
-        <button class="dropbtn hieke">Hieke
-            <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content">
-            <a href="hieke_workshops.html">Workshops</a>
-            <a href="hieke_ontwikkeling.html">Ontwikkeling</a>
-        </div>
-    </div>
-    <div class="dropdown">
-        <button class="dropbtn tomas">Tomas
-            <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content">
-            <a href="tomas_workshops.html">Workshops</a>
-            <a href="tomas_ontwikkeling.html">Ontwikkeling</a>
-        </div>
-    </div>
-</div>
+</body>
