--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
     <div class="row">
         <div class="side">
             <h2>Over Giesbers</h2>
-            <p>Giesbers Ontwikkelen en Bouwen is een zelfstandig opererende dochten van Giesbers Groep Ontwikkelen en
+            <p>Giesbers Ontwikkelen en Bouwen is een zelfstandig opererende dochter van Giesbers Groep Ontwikkelen en
                 Bouwen en is gevestigd aan de Nieuweweg in Wijchen. Het is een familiebedrijf, wat valt onder Trebbe. Ze
                 pakken kleinere, maar ook grote projecten aan op een maatschappelijk verantwoorde manier met oog voor
                 people, planet en prosperity. Giesbers expertise ligt in de vastgoed- en gebiedsontwikkeling, nieuwbouw,
