--- a/tomas_workshops.html
+++ b/tomas_workshops.html
@@ -74,31 +74,38 @@
 
 
             <h2>Smart Connection</h2>
+                <p> In dit hoofdstuk benoem ik wat ik geleerd heb gedurende de lessen Smart Connection. Ik pak een aantal onderwerpen er tussenuit omdat ik deze 
+                    opvallend of leerzaam vind. 
+                </p>
                 <h4>HTML en CSS</h4>
                     <p> In de eerste les van Smart Connection hebben we voor het eerst kennis gemaakt met het schrijven in de taal HTML en CSS. Hierbij zijn
                         we begonnen met het maken van een site zonder het gebruik van CSS opmaak, hierna hebben we een CSS opmaak toegevoegd aan deze site.
                         Hierdoor is het erg duidelijk om te zien wat de CSS doet. Ik had voorafgaand aan deze minor nog nooit gebruik gemaakt van HTML of CSS 
-                        of iets wat hier op lijkt. Ik vond het persoonlijk erg indrukwekkend om te zien wat ik na één les al had bereikt. 
+                        of iets wat hier op lijkt. Ik vond het persoonlijk erg indrukwekkend om te zien wat ik na één les al had bereikt. In basis taal kan ik 
+                        een site vanuit niks maken, daarnaast kan ik deze vorm geven doormiddel van kleuren en afbeeldingen toe te voegen.
                     </p>
-                    <p>In de onderstaande links is de door mij gemaakte site weergegeven:</p>
+                    <p> In de onderstaande link is de door mij gemaakte site weergegeven:</p>
                     <p><a href="Smart Connection Tomas/Les 1.html">Site les 1</a></p>
 
-                <h5>Application Programming Interface</h5>
-                    <div class="fakeimg" style="height:200px;">Image</div>
+                <h4>Application Programming Interface</h4>
                     <p> Application Programming Interface ook wel API genoemd is bedoeld om op een geformaliseerde manier gegevens uit te wisselen tussen
-                        apps. Simpel gezegd zorgen API's er voor dat men gegevens(foto's, berichten, meldingen etc.) kan delen. Voor het bekijken van zulk
+                        apps. Simpel gezegd zorgen API's er voor dat men gegevens(foto's, berichten, meldingen etc.) kan delen. Voor het bekijken van zulke
                         gegevens worden echter ook API's voor gebruikt. Je kan hierbij denken aan sociale media apps, voor het uitwisselen van de gegevens die
-                        men stuurd worden API's gebruikt. 
+                        men stuurd worden API's gebruikt.
                     </p>
-                    <p> asd
+                    <p> De term API is één van de nieuwe termen die ik gedurende deze minor heb geleerd en vind het een erg interessant term omdat deze uitlegt 
+                        hoe het uitwisselen van data in het dagelijkse leven werkt. Naast de betekenis van de term heb ik hier ook mee leren werken, ik 
+                        heb geleerd hoe men bepaalde data op kan vragen. Zo ben ik te werk gegaan met het simpele voorbeeld van het opvragen van het weer op
+                        op een bepaalde locatie. Hierna ben ik aan de gang gegaan met de foto van de dag van NASA. 
                     </p>
-
-                <h5>Title description, Sep 2, 2017</h5>
-                    <div class="fakeimg" style="height:200px;">Image</div>
-                    <p>Some text..</p>
-                    <p> Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco.</p>
+                    <p> In de onderstaande figuren is zowel het live weerbericht als de NASA foto van de dag:</p>
+                    <div class="main-tomas">
+                        <h2>Het weerstation</h2>
+                        <iframe src="Smart Connection Tomas/Weerstation/Weerstation.html" name="weerstation">
+                            <p>Deze browser ondersteunt geen iFrames.</p>
+                            <p>Open deze <a href="Smart Connection Tomas/Weerstation/Weerstation.html" target="_blank">link</a> om het weerstation in te zien.</p>
+                        </iframe>
+                    </div>
         </div>
     </div>
 
