--- a/tomas_ontwikkeling.html
+++ b/tomas_ontwikkeling.html
@@ -25,32 +25,70 @@
 
     <div class="row">
         <div class="side-tomas">
-            <h2>About Me</h2>
-            <h5>Photo of me:</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-            <h3>More Text</h3>
-            <p>Lorem ipsum dolor sit ame.</p>
-            <div class="fakeimg" style="height:60px;">Image</div><br>
-            <div class="fakeimg" style="height:60px;">Image</div><br>
-            <div class="fakeimg" style="height:60px;">Image</div>
+            <h2>Tomas Leijser</h2>
+            <img class="fakeimg" src="images/Tomas met camera.jpg" alt="Tomas met camera" width="400" height="490">
+            <p>Dit is een foto van mij waarin ik één van de 360 graden camera's op mijn helm heb gemonteerd welke Giesbers gebruikt om het werk op te nemen.</p>
+            <h2>Contact</h2>
+            <h3>Email:</h3>TFM.Leijser@Student.HAN.nl
+            <h3>Telefoon:</h3>+31(0) 6 8391 0130
+            <h3>Locatie:</h3>Karstraat 40 te Huissen
+            <h3>Linkedin:</h3><a href="https://www.linkedin.com/in/tomas-leijser-a95507211/">TomasLeijser</a>
+
         </div>
         <div class="main-tomas">
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Dec 7, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
+            <h2>Over Mij</h2>
             <p>Some text..</p>
             <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                ullamco.</p>
+                ullamco.
+            </p>
             <br>
-            <h2>TITLE</h2>
-            <h5>Title description, Sep 2, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
+
+            <h2>Competenties</h2>
+            <h4>Je toont veel initiatief en betrokkenheid</h4>
+            <p>Tijdens het werken aan deze minor ben ik actief aanwezig geweest, zowel binnen mijn projectteam als tijdens de lessen en Workshops. Gedurende 
+                vergaderingen, interviews of het maken van het project heb ik mijn mening laten horen en kwam met ideeën. Een goed voorbeeld hiervan is tijdens
+                de vergaderingen bij Giesbers gebleken, tijdens deze vergaderingen heb ik vanaf het tweede gesprek wat we met Nigel en Dries hebben gehad de
+                voorzittersrol op mij genomen. Dit houd in dat ik er voor zorgde dat er iedere vergadering een agenda klaar stond en dat ik de leiding in het 
+                gesprek nam. Deze mate van zelfstandigheid is vanuit Nigel en Dries erg positief bevallen, dit hebben zij meerdere malen aan laten horen. 
+            </p>
+
+            <h4>Je meningen zijn of adviezen zijn gebasseerd op gedegen onderzoek</h4>
+            <p>Tijdens de minor Smart Industry heb geleerd dat mijn meningen en vooral de adviezen die ik doe gebaseerd dienen te zijn op een gedegen onderzoek. 
+                Zoals ik eerder heb aangegeven wordt er enorm weinig aandacht besteed aan dit onderwerp de studie die ik aan het volgen ben, dit was dan ook erg 
+                wennen voor mij. Het project wat ik voor Giesbers aan het doen was bestond voornamelijk uit het maken van een advies, het doen van gedegen 
+                onderzoek was dan ook vanbelang. 
+            </p>
+            <p>Hierdoor was ik al erg bewust van dit leerdoel. Het bijhouden van de bronnen die ik heb geraadpleecht heb ik bijgehouden, citaten heb ik vermeld 
+                en de bronnen vermeld in de bronnenlijst. Echter kregen wij als groep de opmerking dat de bronnen niet onafhankelijk zijn en dus wellicht niet 
+                betrouwbaar zijn. Mariëlle heeft ons op het juiste pad geholpen door een aantal bronnen door te sturen die zij kende, hier hebben wij op 
+                voortborduurt. Hierdoor ben ik nog allerter op welke bronnen ik zoek en toepas, dit is een leerdoel die ik goed kan gebruiken bij het afstuderen 
+                wat al om de hoek kijkt. 
+            </p>
+
+            <h4>Je kiest ambitieuze leerdoelen en verkent disciplines buiten je eigen vakgebeid</h4>
             <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                ullamco.</p>
+                ullamco.
+            </p>
+
+            <h4>Je bent bewust bezig met je persoonlijke groei</h4>
+            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                ullamco.
+            </p>
+
+            <h4>Je gebruikt feedback en zelfreflectie om te leren</h4>
+            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                ullamco.
+            </p>
+
+            <h4>Je helpt andere actief groeien</h4>
+            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                ullamco.
+            </p>
         </div>
     </div>
 
