--- a/tomas_ontwikkeling.html
+++ b/tomas_ontwikkeling.html
@@ -38,15 +38,15 @@
         <div class="main-tomas">
             <h2>Over Mij</h2>
             <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
+            <p> Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                ullamco.
+                ullamco. 
             </p>
             <br>
 
             <h2>Competenties</h2>
             <h4>Je toont veel initiatief en betrokkenheid</h4>
-            <p>Tijdens het werken aan deze minor ben ik actief aanwezig geweest, zowel binnen mijn projectteam als tijdens de lessen en Workshops. Gedurende 
+            <p> Tijdens het werken aan deze minor ben ik actief aanwezig geweest, zowel binnen mijn projectteam als tijdens de lessen en Workshops. Gedurende 
                 vergaderingen, interviews of het maken van het project heb ik mijn mening laten horen en kwam met ideeën. Een goed voorbeeld hiervan is tijdens
                 de vergaderingen bij Giesbers gebleken, tijdens deze vergaderingen heb ik vanaf het tweede gesprek wat we met Nigel en Dries hebben gehad de
                 voorzittersrol op mij genomen. Dit houd in dat ik er voor zorgde dat er iedere vergadering een agenda klaar stond en dat ik de leiding in het 
@@ -54,12 +54,12 @@
             </p>
 
             <h4>Je meningen zijn of adviezen zijn gebasseerd op gedegen onderzoek</h4>
-            <p>Tijdens de minor Smart Industry heb geleerd dat mijn meningen en vooral de adviezen die ik doe gebaseerd dienen te zijn op een gedegen onderzoek. 
+            <p> Tijdens de minor Smart Industry heb geleerd dat mijn meningen en vooral de adviezen die ik doe gebaseerd dienen te zijn op een gedegen onderzoek. 
                 Zoals ik eerder heb aangegeven wordt er enorm weinig aandacht besteed aan dit onderwerp de studie die ik aan het volgen ben, dit was dan ook erg 
                 wennen voor mij. Het project wat ik voor Giesbers aan het doen was bestond voornamelijk uit het maken van een advies, het doen van gedegen 
                 onderzoek was dan ook vanbelang. 
             </p>
-            <p>Hierdoor was ik al erg bewust van dit leerdoel. Het bijhouden van de bronnen die ik heb geraadpleecht heb ik bijgehouden, citaten heb ik vermeld 
+            <p> Hierdoor was ik al erg bewust van dit leerdoel. Het bijhouden van de bronnen die ik heb geraadpleecht heb ik bijgehouden, citaten heb ik vermeld 
                 en de bronnen vermeld in de bronnenlijst. Echter kregen wij als groep de opmerking dat de bronnen niet onafhankelijk zijn en dus wellicht niet 
                 betrouwbaar zijn. Mariëlle heeft ons op het juiste pad geholpen door een aantal bronnen door te sturen die zij kende, hier hebben wij op 
                 voortborduurt. Hierdoor ben ik nog allerter op welke bronnen ik zoek en toepas, dit is een leerdoel die ik goed kan gebruiken bij het afstuderen 
@@ -67,25 +67,27 @@
             </p>
 
             <h4>Je kiest ambitieuze leerdoelen en verkent disciplines buiten je eigen vakgebeid</h4>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                ullamco.
+            <p> Binnen de minor Smart Industry is het een belangrijk facet om leerdoelen buiten je eigen werkveld en expertise te ontwikkelen. Door de minor 
+                Smart Industry te kiezen met een civiel techniesche achtergrond ben ik vanaf dag één bezig met het leren van nieuwe technologiën en het ontdekken
+                van nieuwe werkvelden. Het zou dan ook niet verbazen dat ik ervoor het gekozen om het project uit te voeren bij het bouwbedrijf Giesbers, dit is 
+                een meer vertrouwde plek voor mij. Echter had het onderzoek wat wij deden voor dit bedrijf niet veel te maken met mijn achtergrond, dit ging 
+                over het gebruik van data en het toepassen van bepaalde technologiën. Het is dus veilig om te zeggen dat ik gedurende de hele minor bezig ben 
+                geweest met het ondekken van nieuwe werkvelden, en hierdoor mijzelf te dwingen buiten mijn comfort zone te stappen. 
             </p>
 
             <h4>Je bent bewust bezig met je persoonlijke groei</h4>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                ullamco.
+            <p> Gedurende deze minor ben ik continue bezig geweest met mijn persoonlijke groei, ik wilde nieuwe dingen leren buiten mijn expertise en hoe deze 
+                toe te passen zijn in mijn eigen werkveld. 
             </p>
 
             <h4>Je gebruikt feedback en zelfreflectie om te leren</h4>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
+            <p> Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                 ullamco.
             </p>
 
             <h4>Je helpt andere actief groeien</h4>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
+            <p> Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                 ullamco.
             </p>
