--- a/tomas_ontwikkeling.html
+++ b/tomas_ontwikkeling.html
@@ -26,7 +26,7 @@
     <div class="row">
         <div class="side-tomas">
             <h2>Tomas Leijser</h2>
-            <img class="fakeimg" src="images/Tomas met camera.jpg" alt="Tomas met camera" width="400" height="490">
+            <img class="fakeimg" src="images/Tomas met camera.jpg" alt="Tomas met camera" width="350" height="440">
             <p>Dit is een foto van mij waarin ik één van de 360 graden camera's op mijn helm heb gemonteerd welke Giesbers gebruikt om het werk op te nemen.</p>
             <h2>Contact</h2>
             <h3>Email:</h3>TFM.Leijser@Student.HAN.nl
@@ -35,7 +35,7 @@
             <h3>Linkedin:</h3><a href="https://www.linkedin.com/in/tomas-leijser-a95507211/">TomasLeijser</a>
 
         </div>
-        <div class="main-tomas">
+        <div class="main-tomasontwikkeling">
             <h2>Over Mij</h2>
             <p>Some text..</p>
             <p> Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
@@ -77,19 +77,34 @@
 
             <h4>Je bent bewust bezig met je persoonlijke groei</h4>
             <p> Gedurende deze minor ben ik continue bezig geweest met mijn persoonlijke groei, ik wilde nieuwe dingen leren buiten mijn expertise en hoe deze 
-                toe te passen zijn in mijn eigen werkveld. 
+                toe te passen zijn in mijn eigen werkveld. Onderweg naar dit doel ben ik mijn sterke eigenschappen, maar ook mijn zwakke eigenschappen 
+                tegengekomen. Ik heb geleerd om op deze eigenschappen te reflecteren en vervolgens hier ook aan te werken. Zo is het gedurende deze minor wederom
+                gebleken dat het spreken en presenterend vermogen van mij redelijk goed is, toch heb ik het idee dat deze eigenschap zich verder heeft ontwikkeld.
+                Een groot deel van de minor is het presenteren van je meningen of ondervindingen. In de eerste les stonden alle leerlingen al een keer voor de 
+                klas, in het begin was ik daar nog een klein beetje zenuwachtig voor en aan het eind van de minor vind ik het totaal niet meer vervelend of 
+                spannend. De groei in deze eigenschap gaat zeker van pas komen bij het afstuderen maar ook in de verder loop van mijn carriére. 
             </p>
 
             <h4>Je gebruikt feedback en zelfreflectie om te leren</h4>
-            <p> Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                ullamco.
+            <p> Om de zoveel weken werd er vanuit de minor een moment geregeld waarin iedere projectgroep het door hen gemaakte werk tot zover kan presenteren. 
+                Tijdens deze momenten was het doel om de voortgang van het project in kaart te brengen, de medestudenten laten weten waar je mee bezig bent, maar
+                ook het krijgen van feedback is een belangrijk doel van deze momenten. Wij hebben hier de mogelijkheid om van de kennis van de begeleider vanuit
+                school te profiteren. Mariëlle heeft ons gedurende deze momenten feedback gegeven over bijvoorbeeld de betrouwbaarheid van de bronnen die wij
+                geraadpleecht hebben. Naast de feedback hebben wij feedback gekregen van de begeleider vanuit Giesbers, om de week zaten wij samen met Nigel en 
+                Dries om de voortgang en planning te bespreken. Tijdens deze vergaderingen spraken we het door ons gemaakte werk tot zo ver door, Nigel en Dries
+                gaven hier feedback op welke wij vervolgens verwerkten.
             </p>
 
             <h4>Je helpt andere actief groeien</h4>
-            <p> Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                ullamco.
+            <p> Tijdens de minor Smart Industry ben ik veel bezig geweest met het helpen van andere groeien, dit is voornamelijk te merken geweest tijdens het 
+                werken aan het project voor Giesbers. Ik ben van mijzelf vrij goed in het geven van mijn meningen en het houden van een vergadering, één van mijn
+                groepsgenoten heeft hier echter meer moeite mee. Echter doordat ik bij haar in de projectgroep zit wordt zij af en toe gedwongen om mee te doen 
+                aan deze gesprekken, hierdoor wordt zij een beetje in het diepe gegooit. Toevallig heeft zij aangegeven dit ook gemerkt te hebben en gaf ze aan 
+                dit een goede manier te vinden om aan haar leerdoel te werken.
+            </p>
+            <p> Daarnaast heb ik een groepsgenoot geholpen met diverse vakkennis. Het onderzoek wat wij bij het bouwbedrijf Giesbers hebben gedaan is deels 
+                gericht op de uitvoering van de bouw, dit is een proces wat ik vanuit mijn civiele achtergrond al eens heb gezien. Bij het in beeld brengen van
+                dit proces heb ik deze kennis dus kunnen delen met mijn groepsgenoten, op basis hiervan konden wij sneller aan het werk met het onderzoek zelf.
             </p>
         </div>
     </div>
