Opmaak hieke ontwikkeling en workshops pagina

--- a/hieke_ontwikkeling.html
+++ b/hieke_ontwikkeling.html
@@ -15,18 +15,76 @@
 <body id = Hieke>
 
     <div class="header">
-        <h1>My Website</h1>
-        <p>A <b>responsive</b> website created by me.</p>
+        <h1>Hieke Stoof</h1>
+        <p>Studenten nummer: 1658078</p>
+        <p>Studie: Civiele Techniek</p>
+        <p>Minor: Smart Industry</p>
     </div>
 
     <div id="nav-placeholder"></div>
+
+    <div class="row">
+        <div class="side-hieke">
+            <h2>Hieke Leijser</h2>
+            <h2>Contact</h2>
+            <h3>Email:</h3>HJ.stoof@Student.HAN.nl
+            <h3>Telefoon:</h3>+31(0) 6 2522 0274
+            <h3>Locatie:</h3>Robert van Voerststraat 2 te Deventer
+            <h3>Linkedin:</h3><a href="https://www.linkedin.com/in/hieke-stoof-673a46212/">HiekeStoof</a>
+
+        </div>
+        <div class="main-hieke">
+            <h2>Over Mij</h2>
+            <p>Some text..</p>
+            <p>1e kopje
+            </p>
+            <br>
+
+            <h2>Competenties</h2>
+            <h4>Je toont veel initiatief en betrokkenheid</h4>
+            <p>Binnen de komende 5 maanden zal ik mijn leervermogen verbeteren door actief feedback en zelfreflectie te integreren in mijn dagelijkse taken, meetbaar aan de hand van regelmatige evaluaties en aanpassingen om mijn professionele ontwikkeling te bevorderen.
+            </p>
+            <p>2e kopje
+            </p>
+
+            <h4>Je meningen zijn of adviezen zijn gebasseerd op gedegen onderzoek</h4>
+            <p>Binnen de komende 5 maanden streef ik ernaar mijn meningen en adviezen te versterken door gedegen onderzoek toe te passen, gemeten aan de hand van regelmatige raadpleging van betrouwbare bronnen en die informatief actief te integreren, met als doel mijn professionele besluitvorming te verbeteren.
+            </p>
+            <p>2e kopje
+            </p>
+
+            <h4>Je kiest ambitieuze leerdoelen en verkent disciplines buiten je eigen vakgebeid</h4>
+            <p>In de komende 5 maanden wil ik mijn kennis van HTML verbeteren de lessen waarbij HTML gebruikt wordt aandachtig te volgen, met als uiteindelijk meetbaar resultaat het succesvol ontwerpen van een eenvoudige webpagina.
+            </p>
+            <p>2e kopje
+            </p>
+
+            <h4>Je bent bewust bezig met je persoonlijke groei</h4>
+            <p>Binnen de komende 5 maanden zal ik mijn bewuste betrokkenheid bij persoonlijke ontwikkeling vergroten door regelmatig zelfreflectie, het identificeren van specifieke groeikansen en actieve deelname aan relevante workshops, meetbaar aan de hand van het vastleggen van leerervaringen en behaalde persoonlijke mijlpalen.
+            </p>
+            <p>2e kopje
+            </p>
+
+            <h4>Je gebruikt feedback en zelfreflectie om te leren</h4>
+            <p>Binnen de komende 5 maanden zal ik mijn leervermogen verbeteren door actief feedback en zelfreflectie te integreren in mijn dagelijkse taken, meetbaar aan de hand van regelmatige evaluaties en aanpassingen om mijn professionele ontwikkeling te bevorderen.
+            </p>
+            <p>2e kopje
+            </p>
+
+            <h4>Je helpt andere actief groeien</h4>
+            <p>Binnen de komende 5 maanden zal ik mij actief inzetten om anderen te helpen groeien door regelmatig mijn kennis en ervaring te delen, meetbaar aan de hand van positieve feedback en waarneembare vooruitgang bij mijn collega's, met als doel een stimulerende bijdrage te leveren aan hun professionele ontwikkeling.
+            </p>
+            <p>2e kopje
+            </p>
+        </div>
+    </div>
 
     <script>
         $(function () {
             $("#nav-placeholder").load("navigatie.html");
         });
     </script>
-    
+
 </body>
 
 </html>
