--- a/hieke_ontwikkeling.html
+++ b/hieke_ontwikkeling.html
@@ -33,7 +33,7 @@
             <h3>Linkedin:</h3><a href="https://www.linkedin.com/in/hieke-stoof-673a46212/">HiekeStoof</a>
 
         </div>
-        <div class="main-hieke">
+        <div class="main-hiekeontwikkeling">
             <h2>Over Mij</h2>
             <p>Some text..</p>
             <p>1e kopje
