--- a/hieke_workshops.html
+++ b/hieke_workshops.html
@@ -25,12 +25,18 @@
 
     <div class="row">
         <div class="main-hieke">
+            <h2>Workshops</h2>
+            <p>Om mijn persoonlijke en professionele ontwikkeling goed vast te stellen vertel ik hieronder wat ik het op gepakt en heb geleerd met behulp van de minor Smart industry en daarnaast bij het bedrijf Giesbers.</p>
             <h2>Smart Business</h2>
             <p> inleiding
             </p>
                 <h4>onderwerp</h4>
-                    <p> 1e kopje
-                    </p>
+                <p> Voorafgaand aan de Smart Business-les kregen we de opdracht om een video te bekijken zonder te weten wat we ermee zouden doen.
+                    In de eerste les werd uitgelegd dat we in groepen van vier een connectie moesten leggen tussen de verschillende video's.
+                    Hierdoor ontstond een puzzel waarbij we moesten bepalen welke puzzelstukjes van de filmpjes in elkaar pasten waardoor je alle filmpjes connect.
+                    Nadat we deze puzzel hadden gelegd en op een whiteboard hadden uitgebeeld, moesten we deze aan elkaar pitchen.
+                    Elke groep dacht mee en stelde vragen over waarom wij dachten dat er een connectie lag (figuur...).
+                </p>
                     <p> 2e kopje
                     </p>
                     <img class="logo" src="images/Impact van technologie.jpg" alt="Impact van technologie" width="300" height="200">  
